Add fn:lang tests for 3-part language code

--- a/fn/lang/lang.xml
+++ b/fn/lang/lang.xml
@@ -4,4 +4,5 @@
  <div xml:lang="en"><para>And now, and forever!</para></div>
  <para xml:lang="EN"/>
  <para xml:lang="en-us"/>
+ <para xml:lang="de-DE-1996">New German Orthography</para>
 </langs>
